add CAF adresse route
