# back/controllers/caf.js
@@ -45,4 +45,13 @@ function CafController(options) {
       return format(res, data)
     })
   }
+
+  this.getAdress = function(req, res, next) {
+    var codeOrganisme = req.query.codeOrganisme || 148;
+    var numeroAllocataire = req.query.numeroAllocataire || 354;
+    cafService.getAdress(codeOrganisme, numeroAllocataire, (err, data) => {
+      if(err) return next(new StandardError("impossible de contacter la CAF", {code: 500}));
+      return format(res, data)
+    })
+  }
 }
